--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Add-on Week 2</title>
     <link rel="stylesheet" href="src/style.css">
+    <script defer src="src/index.js"></script>
 </head>
 <body>
     
