--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 
-<footer></footer>
+<footer>This was coded by Athenah Coucean and is open sourced on GitHub </footer>
 
      <script  src="src/index.js"></script>
 </body>
