--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 
-<footer>This was coded by Athenah Coucean and is open sourced        on GitHub </footer>
+<footer>This was coded by Athenah Coucean and is open sourced   <a href="http://">on GitHub</a>      </footer>
 
      <script  src="src/index.js"></script>
 </body>
