--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 
-<footer>This was coded by Athenah Coucean and is open sourced   <a href="https://github.com/Athens410/ai-week2.git" target="_blank">on GitHub</a>      </footer>
+<footer>This was coded by Athenah Coucean and is    <a href="https://github.com/Athens410/ai-week2.git" target="_blank">Open Sourced on GitHub</a>      </footer>
 
      <script  src="src/index.js"></script>
 </body>
