--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 
-<footer>This AI project was coded by Athenah Coucean and is    <a href="https://github.com/Athens410/ai-week2.git" target="_blank">Open Sourced on GitHub</a>      </footer>
+<footer>This AI project was coded by Athenah Coucean and is    <a href="https://github.com/Athens410/ai-week2.git" target="_blank">Open Sourced on GitHub</a>   and is hosted on      <a href="https://inspiring-bubblegum-156a82.netlify.app/"></a> Netlify    </footer>
 
      <script  src="src/index.js"></script>
 </body>
