--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     
-<header></header>
-    <h1>Welcome to the joke generator </h1>
+<header>  <h1>Welcome to the joke generator </h1></header>
+  
 
 
 
