--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
   
 
 
+<main>
 
+
+    
+</main>
 
 
 <footer>This AI project was coded by Athenah Coucean and is    <a href="https://github.com/Athens410/ai-week2.git" target="_blank">Open Sourced on GitHub</a>   and is hosted on      <a href="https://inspiring-bubblegum-156a82.netlify.app/" target="_blank">Netlify </a>    </footer>
