--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <main>
 
 
-    <input type="text" placeholder="enter">
+    <input type="text" placeholder="enter"   />
+    <input type="submit">
 </main>
 
 
