--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 <main>
 
 
-    <input type="text" placeholder="enter"   />
+    <input type="text" placeholder="enter"
+    autofocus
+    
+       />
     <input type="submit"  />
 
 
