--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <input type="text" placeholder="enter"
     autofocus
     required
+    autocomplete=""
        />
     <input type="submit"  />
 
