--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <input type="text" placeholder="enter"
     autofocus
     required
-    autocomplete=""
+    autocomplete="off"
        />
     <input type="submit"  />
 
