--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <main>
 
-<form></form>
+<form>
     <input type="text" placeholder="enter"
     autofocus
     required
@@ -26,7 +26,7 @@
        />
     <input type="submit"  />
 
-
+</form>
     <div>
     lansoanad
     <br />
