--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <header>  <h1>Welcome to the joke generator </h1></header>
   
 
-<div class="container"></div>
+<div class="container">
 <main>
 
 <form>
@@ -25,7 +25,7 @@
     autocomplete="off"
     class="down"
        />
-    <input type="submit"  />
+    <input type="submit"    class="skies" />
 
 </form>
     <div>
@@ -39,7 +39,7 @@
 
 
 <footer>This AI project was coded by Athenah Coucean and is    <a href="https://github.com/Athens410/ai-week2.git" target="_blank">Open Sourced on GitHub</a>   and is hosted on      <a href="https://inspiring-bubblegum-156a82.netlify.app/" target="_blank">Netlify </a>    </footer>
-
+</div>
      <script  src="src/index.js"></script>
 </body>
 </html>
