--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <main>
 
 <form>
-    <input type="text" placeholder="enter"
+    <input type="text" placeholder="enter the french poem"
     autofocus
     required
     autocomplete="off"
