--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="container">
 <main>
 
-<form>
+<form class="poem-generator-form">
     <input type="text" placeholder="enter the french poem"
     autofocus
     required
