style: Center and style the poem container
- Centered the poem container horizontally using 'margin: 0 auto;'
- Set a max-width and added box shadow for better styling
- Updated form class to

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="container">
 <main>
 
-<form class="poem-generator-form">
+<form id="poem-generator-form">
     <input type="text" placeholder="enter the french poem"
     autofocus
     required
