--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     autofocus
     required
     autocomplete="off"
-    class="down"
+    class="instructions"
        />
     <input type="submit"    class="skies" />
 
