--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     
-<header>  <h1>Welcome to the joke generator </h1></header>
+<header>  <h1>Welcome to the French Poem generator </h1></header>
   
 
 <div class="container">
