--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <main>
 
 <form id="poem-generator-form">
-    <input type="text" placeholder="enter the french poem"
+    <input type="text" placeholder="enter the topic of a French poem"
     autofocus
     required
     autocomplete="off"
