--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <input type="submit"    class="skies" />
 
 </form>
-<small></small>
+<small>i.e :Flower, Paris, Cheese </small>
     <div class="poem" id="poem">
    
 
