--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <div class="container">
 <main>
-
+<div class="form-container"></div>
 <form id="poem-generator-form">
     <input type="text" placeholder="enter the topic of a French poem"
     autofocus
