--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <div class="container">
 <main>
-<div class="form-container"></div>
+<div class="form-container">
 <form id="poem-generator-form">
     <input type="text" placeholder="enter the topic of a French poem"
     autofocus
@@ -32,6 +32,8 @@
     <input type="submit"    class="skies" />
 
 </form>
+
+</div>
 <small>i.e :Flower, Paris, Cheese </small>
     <div class="poem" id="poem">
    
