--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <input type="submit"    class="skies" />
 
 </form>
-<small>i.e :Flower, Paris, Cheese </small>
+<div>i.e :Flower, Paris, Cheese </div>
 </div>
 
     <div class="poem" id="poem">
