added another class
going to make the text appear only when submit is clicked

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <div class="hint">i.e :Flower, Paris, Cheese </div>
 </div>
 
-    <div class="poem" id="poem">
+    <div class="poem hidden" id="poem">
    
 
 
