--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <main>
 <div class="form-container">
 <form id="poem-generator-form">
-    <input type="text" placeholder="enter the topic of a French poem"
+    <input type="text" placeholder="enter the topic of your choosing!"
     autofocus
     required
     autocomplete="off"
