--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <input type="submit"    class="skies" />
 
 </form>
-<div class="hint">i.e :Flower, Paris, Cheese </div>
+<div class="hint">i.e :Cats, Paris, Cheese </div>
 </div>
 
     <div class="poem hidden" id="poem">
