--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <input type="submit"    class="skies" />
 
 </form>
-<div class="hint">i.e :Animals, Countries, Fun Random Facts and more! </div>
+<div class="hint">i.e :Animals, Countries, Fun Random Facts and more!🌎 </div>
 </div>
 
     <div class="poem hidden" id="poem">
