--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </main>
 
 
-<footer>This AI project was coded by Athenah Coucean and is    <a href="https://main--inspiring-bubblegum-156a82.netlify.app/" target="_blank">Netlify </a>    </footer>
+<footer>This AI project was coded by Athenah Coucean and is  hosted on  <a href="https://main--inspiring-bubblegum-156a82.netlify.app/" target="_blank">Netlify </a>    </footer>
 </div>
      <script  src="src/index.js"></script>
 </body>
